--- a/src/pages/home/home.page.scss
+++ b/src/pages/home/home.page.scss
@@ -1,27 +1,58 @@
-#container {
-  text-align: center;
+@import '~ionic-angular-utilities/lib/styles/mixins';
+@import '~ionic-angular-utilities/lib/styles/responsive';
+@import '../../styles/colors';
+@import '../../styles/fonts';
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+.mainContainer {
+  height: calc(100% - 6rem);
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+  .back, .front {
+      background-color: $c-white;
+  }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+  @include small-mobile {
+      .mainInfos {
+          & > span {
+              font-size: $f-size-2 !important;
+          }
 
-  color: #8c8c8c;
+          & > p {
+              font-size: $f-size-1 !important;
+          }
+      }
 
-  margin: 0;
-}
+      .back > span {
+          font-size: $f-size-0 !important;
+      }
+  }
 
-#container a {
-  text-decoration: none;
+  .goToAlgorithmContainer {
+      width: 100%;
+      padding: 0 10px;
+      position: absolute;
+      bottom: 0;
+      height: 40px;
+      left: 0;
+
+      span {
+          line-height: initial !important;
+          @include vertical-centering-transform(absolute);
+          right: 40px;
+
+          @include small-mobile {
+              font-size: $f-size-3 !important;
+          }
+      }
+
+      ion-icon {
+          @include vertical-centering-transform(absolute);
+          right: 10px;
+
+          @include small-mobile {
+              font-size: $f-size-4 !important;
+          }
+      }
+  }
 }
